--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get_it: ^1.0.3
   cached_network_image: ^1.1.1
   carousel_slider: ^1.3.1
+  firebase_ml_vision: ^0.9.3
+  image_picker: ^0.6.1+10
 
 dev_dependencies:
   # https://medium.com/@psyanite/how-to-add-app-launcher-icons-in-flutter-bd92b0e0873a
@@ -76,6 +78,7 @@ flutter:
     - assets/images/items/seafood/
     - assets/images/items/vegetables/
     - assets/images/items/desserts/
+    - assets/images/items/others/
 
   fonts:
     - family: Raleway
