--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=iloveflutter
-keyPassword=iloveflutter
+storePassword=iloveflutter2019
+keyPassword=iloveflutter2019
 keyAlias=key
-storeFile=C:/keystore/tei/key.jks
+storeFile=C:/keystore/fh2019/key.jks
